--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+XLS_DOCUMENT_PATH="Document/arkusz.xlsx"
+XLS_DOCUMENT_FILTER_PREFIX="DPO_Filter:"
