feat(files): add filepath to env example

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 XLS_DOCUMENT_PATH="Document/arkusz.xlsx"
 XLS_DOCUMENT_FILTER_PREFIX="DPO_Filter:"
+
+PDF_DOCUMENT_PATH="Document/doc.pdf"
